fix: add label color for dark mode.

--- a/client/src/features/visualizer-threejs/ConfigControls.scss
+++ b/client/src/features/visualizer-threejs/ConfigControls.scss
@@ -1,10 +1,22 @@
 .controls-container {
-    //background-color: transparent;
+    font-family:
+        "Metropolis Regular",
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Helvetica,
+        Arial,
+        sans-serif,
+        "Apple Color Emoji",
+        "Segoe UI Emoji",
+        "Segoe UI Symbol";
     background: var(--body-background);
     border: 1px solid var(--border-color);
     padding: 8px 16px;
     border-radius: 8px;
     .controls__list {
+        color: var(--type-color);
         display: flex;
         gap: 8px;
     }
@@ -16,6 +28,10 @@
         input {
             width: 100%;
         }
+    }
+    .controls__error {
+        font-size: 12px;
+        margin-top: 4px;
     }
     .controls__actions {
         margin-top: 16px;
